Version 2.0.17 release (2014/10/08)
-------------------------------------------


Version 2.0.16 release (2014/09/24)
-------------------------------------------

Improved LDAP scripts to sync with SchoolBag.

Sections list added to Report on Attendance and fix for collates.

Added the option to add new fields for staff information, depends
on patch-2.0.16.sql for adding values.

Added postenquiryform action to ClassIS API.

Changes button from transport only fetches bookings with direction
OUT.

Added print_photo for register lists.

Added payee and account/iban to fees_invoice_export.

Added the option to link contacts merging their information.

Added Message button for Configure ePortfolios, it sends Classic 
logins to parents for current students in a form group.

Fees XML library uses ClassIS id for the mandate id.

Fix to SEN Strengths textarea name.

Added Message button for Transport.

Infobook search fields style fixed for lower worklevel.

Added message button for Transport buses.


Version 2.0.15 release (2014/09/10)
-------------------------------------------

Link added to New enrolments last year's total to view the students.

New button from Infobook displays directly the list with students 
if there is only one community and for the current year only displays 
the current students.

Fix to checking columns in completed registers list for IE.

Get the week days in transport_display simplified.

Fix for last update time for completed registers.

Registers notices can be displayed now.

Capslock message is shown only once and for the password.

Added missing jquery link for report comments writer.

Reloads iframe clicking on ClassIS logo.

Fix to report comments checksids.

Checksids action generalised for different form names.


Version 2.0.14 release (2014/08/29)
-------------------------------------------

Fix for Transport editor and Attendance editor modals.

Fix for default view in Infobook student list.
