@@ -1,6 +1,12 @@
 Version 2.0.17 release (2014/10/08)
 -------------------------------------------
 
+A new config option which tunrs on/off the access for form tutors to
+send email to parents for their form. The option is accessible through
+Register.
+
+
+
 
 Version 2.0.16 release (2014/09/24)
 -------------------------------------------
